--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ allure-results/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/src/test/resources/testing.properties
